tp-blog-main/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: your-hostname.com
      http:
        paths:
          - path: /client
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments-service
                port:
                  number: 80
          - path: /event
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 80
          - path: /moderation
            pathType: Prefix
            backend:
              service:
                name: moderation-service
                port:
                  number: 80
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 80
          - path: /query
            pathType: Prefix
            backend:
              service:
                name: query-service
                port:
                  number: 80
